--- a/react/ciso-game/src/Modal.css
+++ b/react/ciso-game/src/Modal.css
@@ -1,13 +1,17 @@
-.modal-overlay {
+  .modal-overlay {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* semi-transparent black overlay */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 20px;
+    max-width: 80%;
+    max-height: 80%;
+    overflow: auto; /* to enable scrolling if content exceeds modal size */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* Add desired margins */
+    margin: 20px;
   }
   
   .modal {
